--- a/aanvallers_en_verdedigers/zijpaginaEthischeHackers.html
+++ b/aanvallers_en_verdedigers/zijpaginaEthischeHackers.html
@@ -13,30 +13,50 @@
 
     <div id="wrapper">
 
-    <header><h1>Ethische hackers</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Ethische hackers</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/ethisch-hackers.webp"
-          alt=" Afbeelding_Etisch-hackers"> </div>
+        <div id="bigimage">
+            <img src="../afbeeldingen/ethisch-hackers.webp" alt=" Afbeelding_Etisch-hackers">
+        </div>
 
-          <article class="kop_samenvattingEthischeHackers1">
+        <article class="kop_samenvattingEthischeHackers1">
             <p>
-                Hacken wordt vaak gekoppeld aan criminele activiteiten, maar er zijn ethische hackers die juist bijdragen aan een veiliger internet. Deze ethische hackers spelen een belangrijke rol in het opsporen van beveiligingslekken en zwakheden. Wanneer ze een lek ontdekken, melden ze dit aan de bijbehorende organisatie om het te verhelpen. In veel gevallen worden ethische hackers beloond door bedrijven voor het melden van beveiligingsproblemen. Toch gebeurt het dat sommige organisaties een beveiligingslek negeren, wat gevaarlijk is voor de gebruikers en hun gegevens. In zulke gevallen kan het verstandig zijn om openbaar te maken dat er een beveiligingslek is om gebruikers te waarschuwen. De meeste ethische hackers volgen de methode: responsible disclosure, waarbij ze eerst het lek melden aan de verantwoordelijke partij en het na een bepaalde periode openbaar maken.
+                Hacken wordt vaak gekoppeld aan criminele activiteiten, maar er zijn ethische hackers die juist
+                bijdragen aan een veiliger internet. Deze ethische hackers spelen een belangrijke rol in het opsporen
+                van beveiligingslekken en zwakheden. Wanneer ze een lek ontdekken, melden ze dit aan de bijbehorende
+                organisatie om het te verhelpen. In veel gevallen worden ethische hackers beloond door bedrijven voor
+                het melden van beveiligingsproblemen. Toch gebeurt het dat sommige organisaties een beveiligingslek
+                negeren, wat gevaarlijk is voor de gebruikers en hun gegevens. In zulke gevallen kan het verstandig zijn
+                om openbaar te maken dat er een beveiligingslek is om gebruikers te waarschuwen. De meeste ethische
+                hackers volgen de methode: responsible disclosure, waarbij ze eerst het lek melden aan de
+                verantwoordelijke partij en het na een bepaalde periode openbaar maken.
             </p>
         </article>
 
- <article class="koptitel"><p>Persvrijheid</p></article>
+        <article class="koptitel">
+            <p>Persvrijheid</p>
+        </article>
 
-<article class="kop_samenvattingEthischeHackers2">
-    <p>
-        Ondanks dat ethische hackers de wet overtreden door te hacken, worden ze niet bestraft, omdat hun rol publieke belang heeft: het beveiligen van het internet. Het publiceren van informatie over gevaarlijke beveiligingsproblemen staat onder persvrijheid, ongeacht of de persoon een journalist is of niet. Er zijn echter wel regels verbonden aan ethisch hacken. Hacken is alleen toegestaan als het de enige manier is om een ernstige fout aan te tonen, en het stelen van gegevens of onnodig hacken kan alsnog leiden tot vervolging en straf.
-    </p>
-</article>
+        <article class="kop_samenvattingEthischeHackers2">
+            <p>
+                Ondanks dat ethische hackers de wet overtreden door te hacken, worden ze niet bestraft, omdat hun rol
+                publieke belang heeft: het beveiligen van het internet. Het publiceren van informatie over gevaarlijke
+                beveiligingsproblemen staat onder persvrijheid, ongeacht of de persoon een journalist is of niet. Er
+                zijn echter wel regels verbonden aan ethisch hacken. Hacken is alleen toegestaan als het de enige manier
+                is om een ernstige fout aan te tonen, en het stelen van gegevens of onnodig hacken kan alsnog leiden tot
+                vervolging en straf.
+            </p>
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
-</div>
+    </div>
 
 </body>
 
