--- a/aanvallers_en_verdedigers/zijpaginaZerodays.html
+++ b/aanvallers_en_verdedigers/zijpaginaZerodays.html
@@ -13,31 +13,52 @@
 
     <div id="wrapper">
 
-    <header><h1>Zero days</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Zero days</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Zerodays.jpg"
-          alt=" afbeelding_Zerodays"> </div>
+        <div id="bigimage">
+            <img src="../afbeeldingen/Zerodays.jpg" alt=" afbeelding_Zerodays">
+        </div>
 
-          <article class="kop_samenvattingZerodays1">
+        <article class="kop_samenvattingZerodays1">
             <p>
-                Een zeroday is een zwakke plek in een software die nog niet ontdekt is. Deze zijn enorm waardevol omdat ze kunnen worden gebruikt om te hacken. Er bestaat een hele handel in zerodays, waarbij belangrijke kwetsbaarheden voor veel geld worden verkocht, van tienduizenden tot honderdduizenden euro's. Organisaties zoals Zerodium bieden flinke bedragen voor het vinden van zerodays, vaak meer dan de oorspronkelijke makers van de software. Helaas worden deze kwetsbaarheden vervolgens vaak doorverkocht aan bedrijven en overheden, die ze inzetten voor potentieel schadelijke doeleinden.
+                Een zeroday is een zwakke plek in een software die nog niet ontdekt is. Deze zijn enorm waardevol omdat
+                ze kunnen worden gebruikt om te hacken. Er bestaat een hele handel in zerodays, waarbij belangrijke
+                kwetsbaarheden voor veel geld worden verkocht, van tienduizenden tot honderdduizenden euro's.
+                Organisaties zoals Zerodium bieden flinke bedragen voor het vinden van zerodays, vaak meer dan de
+                oorspronkelijke makers van de software. Helaas worden deze kwetsbaarheden vervolgens vaak doorverkocht
+                aan bedrijven en overheden, die ze inzetten voor potentieel schadelijke doeleinden.
             </p>
         </article>
 
- <article class="koptitel"><p>Cyberoorlogsvoering</p></article>
+        <article class="koptitel">
+            <p>Cyberoorlogsvoering</p>
+        </article>
 
-<article class="kop_samenvattingZerodays2">
-    <p>
-        Zerodays worden beschouwd als digitale wapens in de cyberoorlogsvoering. Ze kunnen worden ingezet voor schadelijke aanvallen, zoals het overnemen van controle over apparaten, het stelen van gegevens of het platleggen van systemen. Criminelen hebben interesse in zerodays, maar ook beveiligingsbedrijven kopen ze om de kwetsbaarheden te repareren. Overheden gebruiken zerodays voor spionage en om vijandige systemen aan te vallen en waardevolle informatie te verkrijgen. Het gebruik van zerodays is echter controversieel, omdat het internet onveiliger kan worden door deze kwetsbaarheden niet te melden en op te lossen. Hierdoor kwamen er strikte voorwaarden voor het gebruik van zerodays door de Nederlandse overheid. <br>
-Het bekendste voorbeeld van zerodays in actie is Stuxnet, ontwikkeld door de Amerikaanse en Israëlische inlichtingendiensten. Stuxnet gebruikte meerdere zerodays om het Iraanse kernprogramma te saboteren door hun apparaten te beïnvloeden, waardoor het Iraanse kernwapenprogramma werd vertraagd.
-    </p>
-</article>
+        <article class="kop_samenvattingZerodays2">
+            <p>
+                Zerodays worden beschouwd als digitale wapens in de cyberoorlogsvoering. Ze kunnen worden ingezet voor
+                schadelijke aanvallen, zoals het overnemen van controle over apparaten, het stelen van gegevens of het
+                platleggen van systemen. Criminelen hebben interesse in zerodays, maar ook beveiligingsbedrijven kopen
+                ze om de kwetsbaarheden te repareren. Overheden gebruiken zerodays voor spionage en om vijandige
+                systemen aan te vallen en waardevolle informatie te verkrijgen. Het gebruik van zerodays is echter
+                controversieel, omdat het internet onveiliger kan worden door deze kwetsbaarheden niet te melden en op
+                te lossen. Hierdoor kwamen er strikte voorwaarden voor het gebruik van zerodays door de Nederlandse
+                overheid. <br>
+                Het bekendste voorbeeld van zerodays in actie is Stuxnet, ontwikkeld door de Amerikaanse en Israëlische
+                inlichtingendiensten. Stuxnet gebruikte meerdere zerodays om het Iraanse kernprogramma te saboteren door
+                hun apparaten te beïnvloeden, waardoor het Iraanse kernwapenprogramma werd vertraagd.
+            </p>
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
-</div>
+    </div>
 
 </body>
 
