--- a/bedreigingen/zijpaginaZwakhedenCommunicatie.html
+++ b/bedreigingen/zijpaginaZwakhedenCommunicatie.html
@@ -13,26 +13,53 @@
 
     <div id="wrapper">
 
-    <header><h1>Zwakheden in de communicatie</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Zwakheden in de communicatie</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Encryptie.jpg"
-          alt=" afbeelding encryptie"> </div>
+        <div id="bigimage">
+            <img src="../afbeeldingen/Encryptie.jpg" alt=" afbeelding encryptie">
+        </div>
 
-    <article class="kop_samenvattingZwakhedenCommunicatie1"><p>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden gebruikt worden door anderen. Door een Man-in-the-middle aanval kunnen gegevens, terwijl ze via het internet onderweg zijn, afgeluisterd worden. De informatie gaat dan vanaf het apparaat van de gebruiker naar een apparaat van de aanvaller, die persoon kan de informatie onmiddellijk doorsturen naar de server, zodat de gebruiker niet doorheeft dat de informatie onderschept is. 
-            Deze techniek werd vroeger gebruikt door een openbaar wifi-netwerk op te zetten. De gebruikers verbinden hiermee en maken gebruik van het internet, terwijl al het internetverkeer via de hotspot van de aanvaller gaat.
-    </p></article>
+        <article class="kop_samenvattingZwakhedenCommunicatie1">
+            <p>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend
+                informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden
+                gebruikt worden door anderen. Door een Man-in-the-middle aanval kunnen gegevens, terwijl ze via het
+                internet onderweg zijn, afgeluisterd worden. De informatie gaat dan vanaf het apparaat van de gebruiker
+                naar een apparaat van de aanvaller, die persoon kan de informatie onmiddellijk doorsturen naar de
+                server, zodat de gebruiker niet doorheeft dat de informatie onderschept is.
+                Deze techniek werd vroeger gebruikt door een openbaar wifi-netwerk op te zetten. De gebruikers verbinden
+                hiermee en maken gebruik van het internet, terwijl al het internetverkeer via de hotspot van de
+                aanvaller gaat.
+            </p>
+        </article>
 
-          <article class="koptitel"><p>HTTPS en End-to-end encryption</p></article>
+        <article class="koptitel">
+            <p>HTTPS en End-to-end encryption</p>
+        </article>
 
-<article class="kop_samenvattingZwakhedenCommunicatie2">HTTPS is een veiligere versie van het internetprotocol HTTP, dit zijn regels die de gegevensuitwisseling en de communicatie regelen. Het zorgt voor beveiligde communicatie tussen de gebruiker en een website via encryptie (versleuteling). Hierdoor blijven jouw gegevens privé tijdens verzending. Het gebruik van HTTPS maakt het moeilijker voor hackers om gegevens te stelen. Bijna alle moderne apps en websites maken hier tegenwoordig gebruik van. De websitebeheerder moet een SSL-certificaat krijgen om de website te verifiëren, maar de server hoeft niet altijd te weten wie de gebruiker is. Een hangslotje in de adresbalk van je browser betekent dat de verbinding veilig is. <br>De gegevens zijn versleuteld tussen een client en een server, maar de server kan de originele gegevens zien en opslaan, wat aanvallers kunnen misbruiken. End-to-end encryptie versleutelt de gegevens voordat ze het internet op gaan en ontsleutelt ze pas bij de ontvanger, waardoor alleen zij de gegevens kunnen lezen, zelfs als hackers toegang krijgen tot de server. Dit lost problemen op die ontstaan door zwakheden in communicatie en architectuur.
-    
-    </article>
+        <article class="kop_samenvattingZwakhedenCommunicatie2">HTTPS is een veiligere versie van het internetprotocol
+            HTTP, dit zijn regels die de gegevensuitwisseling en de communicatie regelen. Het zorgt voor beveiligde
+            communicatie tussen de gebruiker en een website via encryptie (versleuteling). Hierdoor blijven jouw
+            gegevens privé tijdens verzending. Het gebruik van HTTPS maakt het moeilijker voor hackers om gegevens te
+            stelen. Bijna alle moderne apps en websites maken hier tegenwoordig gebruik van. De websitebeheerder moet
+            een SSL-certificaat krijgen om de website te verifiëren, maar de server hoeft niet altijd te weten wie de
+            gebruiker is. Een hangslotje in de adresbalk van je browser betekent dat de verbinding veilig is. <br>De
+            gegevens zijn versleuteld tussen een client en een server, maar de server kan de originele gegevens zien en
+            opslaan, wat aanvallers kunnen misbruiken. End-to-end encryptie versleutelt de gegevens voordat ze het
+            internet op gaan en ontsleutelt ze pas bij de ontvanger, waardoor alleen zij de gegevens kunnen lezen, zelfs
+            als hackers toegang krijgen tot de server. Dit lost problemen op die ontstaan door zwakheden in communicatie
+            en architectuur.
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        </article>
 
-</div>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+    </div>
 
 </body>
 
