--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -13,33 +13,60 @@
 
     <div id="wrapper">
 
-    <header><h1>Zwakheden bij de gebruiker</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Zwakheden bij de gebruiker</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Wachtwoord.webp"
-          alt=" afbeelding wachtwoord"> </div>
+        <div id="bigimage">
+            <img src="../afbeeldingen/Wachtwoord.webp" alt=" afbeelding wachtwoord">
+        </div>
 
-          <article class="kop_samenvattingZwakhedenGebruiker1"><p>
-            Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in te breken. Dit gebeurt via 'brute force'-technieken, waarbij aanvallers duizenden wachtwoorden per seconde proberen. Veel websites beperken dit aantal pogingen, maar door zwakheden in de architectuur zijn de aanvallers toch in staat om duizenden pogingen te doen. Om dit te voorkomen, is het belangrijk om complexe wachtwoorden te gebruiken met cijfers en speciale tekens. Unieke en langere wachtwoorden verminderen de kans op een geslaagde brute force-aanval. Daarnaast is het aangeraden om geen voor de hand liggende wachtwoorden te gebruiken, regelmatig wachtwoorden te wijzigen, unieke wachtwoorden voor verschillende accounts te hebben en voorzichtig te zijn met de ‘geheime’ vragen die gesteld worden bij een vergeten wachtwoord, want die zijn vaak gemakkelijk te raden voor criminelen.
-            
-        </p></article>
-          
-<article class="koptitel"><p>Wachtwoordsterkte en passwordmanagers</p></article>
+        <article class="kop_samenvattingZwakhedenGebruiker1">
+            <p>
+                Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak
+                kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in
+                te breken. Dit gebeurt via 'brute force'-technieken, waarbij aanvallers duizenden wachtwoorden per
+                seconde proberen. Veel websites beperken dit aantal pogingen, maar door zwakheden in de architectuur
+                zijn de aanvallers toch in staat om duizenden pogingen te doen. Om dit te voorkomen, is het belangrijk
+                om complexe wachtwoorden te gebruiken met cijfers en speciale tekens. Unieke en langere wachtwoorden
+                verminderen de kans op een geslaagde brute force-aanval. Daarnaast is het aangeraden om geen voor de
+                hand liggende wachtwoorden te gebruiken, regelmatig wachtwoorden te wijzigen, unieke wachtwoorden voor
+                verschillende accounts te hebben en voorzichtig te zijn met de ‘geheime’ vragen die gesteld worden bij
+                een vergeten wachtwoord, want die zijn vaak gemakkelijk te raden voor criminelen.
 
-<article class="kop_samenvattingZwakhedenGebruiker2">
-    Veel websites hebben specifieke eisen om de sterkte van wachtwoorden te beoordelen, zodat gegevens goed beveiligd zijn. Er zijn verschillende methoden om de sterkte van een wachtwoord te meten:
-<ul>
-    <li>Entropie: Dit is gebaseerd op de willekeurigheid van informatie en gemeten door de formule van Claude Shannon, die de willekeurigheid van gegevens bepaalt. Hoe meer willekeurig een wachtwoord is, hoe moeilijker het is om te raden.</li>
-<li>Aantal vergelijkbare wachtwoorden: Wachtwoorden die lijken op veel voorkomende patronen of andere wachtwoorden zijn minder uniek en daardoor minder sterk. Het vergelijken van uniekheid van wachtwoorden kan helpen om de sterkte ervan te beoordelen.</li>
-<li>zxcvbn algoritmen: Een medewerker van Dropbox ontwikkelde het zxcvbn die op basis van patronen slim wachtwoorden analyseert en ook nog controleert op het gebruik van bekende woorden, wat de beoordeling van de wachtwoordsterkte verbetert.</li>
-</ul>
-Het beheren van verschillende wachtwoorden voor diverse websites kan lastig zijn. Een oplossing hiervoor is een passwordmanager. Dit is software die wachtwoorden veilig opslaat, zodat er slechts één sterk wachtwoord nodig is. Deze manager vult automatisch de juiste inloggegevens in wanneer er een website bezocht wordt. 
-    </article>
+            </p>
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <article class="koptitel">
+            <p>Wachtwoordsterkte en passwordmanagers</p>
+        </article>
 
-</div>
+        <article class="kop_samenvattingZwakhedenGebruiker2">
+            Veel websites hebben specifieke eisen om de sterkte van wachtwoorden te beoordelen, zodat gegevens goed
+            beveiligd zijn. Er zijn verschillende methoden om de sterkte van een wachtwoord te meten:
+            <ul>
+                <li>Entropie: Dit is gebaseerd op de willekeurigheid van informatie en gemeten door de formule van
+                    Claude Shannon, die de willekeurigheid van gegevens bepaalt. Hoe meer willekeurig een wachtwoord is,
+                    hoe moeilijker het is om te raden.</li>
+                <li>Aantal vergelijkbare wachtwoorden: Wachtwoorden die lijken op veel voorkomende patronen of andere
+                    wachtwoorden zijn minder uniek en daardoor minder sterk. Het vergelijken van uniekheid van
+                    wachtwoorden kan helpen om de sterkte ervan te beoordelen.</li>
+                <li>zxcvbn algoritmen: Een medewerker van Dropbox ontwikkelde het zxcvbn die op basis van patronen slim
+                    wachtwoorden analyseert en ook nog controleert op het gebruik van bekende woorden, wat de
+                    beoordeling van de wachtwoordsterkte verbetert.</li>
+            </ul>
+            Het beheren van verschillende wachtwoorden voor diverse websites kan lastig zijn. Een oplossing hiervoor is
+            een passwordmanager. Dit is software die wachtwoorden veilig opslaat, zodat er slechts één sterk wachtwoord
+            nodig is. Deze manager vult automatisch de juiste inloggegevens in wanneer er een website bezocht wordt.
+        </article>
+
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+    </div>
 
 </body>
 
