--- a/digitale_veiligheid/zijpaginaAuthenticatie.html
+++ b/digitale_veiligheid/zijpaginaAuthenticatie.html
@@ -13,23 +13,52 @@
 
     <div id="wrapper">
 
-    <header><h1>Authenticatie</h1></header>
+        <header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Authenticatie1.webp"
-          alt=" Afbeelding authenticatie"> </div>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
 
-<article class="kop_samenvattingAuthenticatie1"><p>Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren van je identiteit voordat je ergens in mag loggen. Dit is niet alleen het invoeren van een gebruikersnaam en wachtwoord. Het kan ook betekenen dat je iets moet hebben (zoals een telefoon of pas), iets moet weten (een wachtwoord of pincode), of zelfs iets moet zijn (zoals een vingerafdruk of je gezicht). Sommige deskundigen zeggen zelfs dat er een vierde manier is om te controleren of je echt bent: waar je bent op dat moment. Stel je voor, je probeert veel geld over te maken terwijl je in het buitenland bent. Dat kan een signaal zijn voor bijvoorbeeld je bank dat iemand anders misschien toegang probeert te krijgen tot je account. 
-</p></article>
+            <h1>Authenticatie</h1>
 
-          <article class="koptitel"><p>Stappen in de authenticatie</p></article>
+        </header>
 
-<article class="kop_samenvattingAuthenticatie2">Controleren wie je bent, bestaat uit verschillende stappen. Het begint bij de identificatie, hierbij moeten we weten wie je bent. Dit kan bijvoorbeeld door het invoeren van een gebruikersnaam en wachtwoord of door je biometrie, zoals bij vingerafdruk- of gezichtsherkenning-wachtwoorden. Daarna komt de verificatie, waarbij er gecontroleerd wordt of je echt bent die je zegt te zijn. Dit gebeurt meestal door te kijken of de gegevens die je hebt ingevuld overeenkomen met de eerder opgeslagen gegevens in een database. Als er meerdere authenticatie methoden worden gebruikt, verhoogt het de veiligheid van je gegevens. Dat zie je bijvoorbeeld bij bankpassen: om te betalen heb je eerst de pas zelf nodig (iets wat je hebt) en je hebt het wachtwoord nodig (iets wat je weet). Het combineren van twee vormen van authenticatie wordt two-factor authentication (2FA) genoemd en dat maakt het moeilijker voor hackers om toegang te krijgen.</article>
+        <div id="bigimage">
+            <img src="../afbeeldingen/Authenticatie1.webp" alt=" Afbeelding authenticatie">
+        </div>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <article class="kop_samenvattingAuthenticatie1">
+            <p>Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot
+                belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het
+                echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren van je identiteit voordat je
+                ergens in mag loggen. Dit is niet alleen het invoeren van een gebruikersnaam en wachtwoord. Het kan ook
+                betekenen dat je iets moet hebben (zoals een telefoon of pas), iets moet weten (een wachtwoord of
+                pincode), of zelfs iets moet zijn (zoals een vingerafdruk of je gezicht). Sommige deskundigen zeggen
+                zelfs dat er een vierde manier is om te controleren of je echt bent: waar je bent op dat moment. Stel je
+                voor, je probeert veel geld over te maken terwijl je in het buitenland bent. Dat kan een signaal zijn
+                voor bijvoorbeeld je bank dat iemand anders misschien toegang probeert te krijgen tot je account.
+            </p>
+        </article>
 
-</div>
+        <article class="koptitel">
+            <p>Stappen in de authenticatie</p>
+        </article>
+
+        <article class="kop_samenvattingAuthenticatie2">Controleren wie je bent, bestaat uit verschillende stappen. Het
+            begint bij de identificatie, hierbij moeten we weten wie je bent. Dit kan bijvoorbeeld door het invoeren van
+            een gebruikersnaam en wachtwoord of door je biometrie, zoals bij vingerafdruk- of
+            gezichtsherkenning-wachtwoorden. Daarna komt de verificatie, waarbij er gecontroleerd wordt of je echt bent
+            die je zegt te zijn. Dit gebeurt meestal door te kijken of de gegevens die je hebt ingevuld overeenkomen met
+            de eerder opgeslagen gegevens in een database. Als er meerdere authenticatie methoden worden gebruikt,
+            verhoogt het de veiligheid van je gegevens. Dat zie je bijvoorbeeld bij bankpassen: om te betalen heb je
+            eerst de pas zelf nodig (iets wat je hebt) en je hebt het wachtwoord nodig (iets wat je weet). Het
+            combineren van twee vormen van authenticatie wordt two-factor authentication (2FA) genoemd en dat maakt het
+            moeilijker voor hackers om toegang te krijgen.</article>
+
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+    </div>
 
 </body>
 
