--- a/digitale_veiligheid/zijpaginaIntegriteit.html
+++ b/digitale_veiligheid/zijpaginaIntegriteit.html
@@ -13,15 +13,32 @@
 
     <div id="wrapper">
 
-    <header><h1>Intergriteit</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Intergriteit</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Integriteit.jpeg"
-          alt=" afbeelding integriteit"> </div>
+        <div id="bigimage">
+            <img src="../afbeeldingen/Integriteit.jpeg" alt=" afbeelding integriteit">
+        </div>
 
-          <article class="kop_samenvattingIntegriteit1"><p> In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en controleren van integriteit zijn onmisbaar. Dingen zoals checksums en IBAN-controles zorgen ervoor dat de informatie betrouwbaar blijft. Autoriseren betekent dat er bepaald wordt wie wat mag doen, gebaseerd op hun rol. Op school websites hebben docenten bijvoorbeeld meer rechten dan leerlingen. De authorisatie kan door de beheerder worden aangepast via file permissions. Controleren van integriteit is ervoor zorgen dat gegevens niet alleen juist zijn, maar ook ongewijzigd blijven, zodat ze veilig worden verwerkt. De gegevens moeten dan aan een paar eisen voldoen, er worden controlevragen gesteld en als ze niet aan de eisen voldoen, kan het systeem de gebruiker meldingen sturen, de gegevens automatisch aanpassen of de gegevens niet verwerken en rapporteren. Hieronder zie is een tabel te zien met de eisen en crontrolevragen:
-        </p></article>
+        <article class="kop_samenvattingIntegriteit1">
+            <p> In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt
+                superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en
+                controleren van integriteit zijn onmisbaar. Dingen zoals checksums en IBAN-controles zorgen ervoor dat
+                de informatie betrouwbaar blijft. Autoriseren betekent dat er bepaald wordt wie wat mag doen, gebaseerd
+                op hun rol. Op school websites hebben docenten bijvoorbeeld meer rechten dan leerlingen. De authorisatie
+                kan door de beheerder worden aangepast via file permissions. Controleren van integriteit is ervoor
+                zorgen dat gegevens niet alleen juist zijn, maar ook ongewijzigd blijven, zodat ze veilig worden
+                verwerkt. De gegevens moeten dan aan een paar eisen voldoen, er worden controlevragen gesteld en als ze
+                niet aan de eisen voldoen, kan het systeem de gebruiker meldingen sturen, de gegevens automatisch
+                aanpassen of de gegevens niet verwerken en rapporteren. Hieronder zie is een tabel te zien met de eisen
+                en crontrolevragen:
+            </p>
+        </article>
         <article>
             <table class="custom-table" border="1">
                 <tr>
@@ -54,17 +71,29 @@
                 </tr>
             </table>
         </article>
-          <article class="koptitel"><p>Integriteit garanderen</p></article>
+        <article class="koptitel">
+            <p>Integriteit garanderen</p>
+        </article>
 
-<article class="kop_samenvattingIntegriteit2">
-    Het is belangrijk om de integriteit van bestanden te garanderen wanneer je ze deelt of ontvangt, vooral via het internet of een USB-stick. Het kan voorkomen dat de integriteit wordt aangetast en het bestand onderweg is gewijzigd. Een methode om te controleren of het ontvangen bestand hetzelfde is als het origineel, is het gebruiken van checksums. Dit zijn een soort vingerafdrukken van bestanden. Bij het downloaden van programma-installatiebestanden zie je soms een checksum. Het ontvangen bestand maakt ook een checksum, waardoor je kan controleren of het hetzelfde is als die van de oorspronkelijke bron.
-    Een andere manier om gegevensintegriteit te garanderen, is door back-ups te maken. Als er onverwacht iets met je gegevens gebeurt, kun je terugkeren naar een situatie waarin de gegevens nog intact waren.
-    Het IBAN (International Bank Account Number) heeft een controlegetal, vergelijkbaar met een checksum, om typfouten te voorkomen bij het invoeren van bankrekeningnummers. Wanneer je een IBAN invoert, wordt het gecontroleerd op geldigheid. Zelfs een kleine wijziging in het IBAN-nummer maakt het ongeldig, waardoor fouten bij het overnemen worden voorkomen en gebruikers zeker weten dat het ingevoerde rekeningnummer nauwkeurig is.
-    </article>
+        <article class="kop_samenvattingIntegriteit2">
+            Het is belangrijk om de integriteit van bestanden te garanderen wanneer je ze deelt of ontvangt, vooral via
+            het internet of een USB-stick. Het kan voorkomen dat de integriteit wordt aangetast en het bestand onderweg
+            is gewijzigd. Een methode om te controleren of het ontvangen bestand hetzelfde is als het origineel, is het
+            gebruiken van checksums. Dit zijn een soort vingerafdrukken van bestanden. Bij het downloaden van
+            programma-installatiebestanden zie je soms een checksum. Het ontvangen bestand maakt ook een checksum,
+            waardoor je kan controleren of het hetzelfde is als die van de oorspronkelijke bron.
+            Een andere manier om gegevensintegriteit te garanderen, is door back-ups te maken. Als er onverwacht iets
+            met je gegevens gebeurt, kun je terugkeren naar een situatie waarin de gegevens nog intact waren.
+            Het IBAN (International Bank Account Number) heeft een controlegetal, vergelijkbaar met een checksum, om
+            typfouten te voorkomen bij het invoeren van bankrekeningnummers. Wanneer je een IBAN invoert, wordt het
+            gecontroleerd op geldigheid. Zelfs een kleine wijziging in het IBAN-nummer maakt het ongeldig, waardoor
+            fouten bij het overnemen worden voorkomen en gebruikers zeker weten dat het ingevoerde rekeningnummer
+            nauwkeurig is.
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
-</div>
+    </div>
 
 </body>
 
