--- a/aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html
+++ b/aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html
@@ -13,31 +13,58 @@
 
     <div id="wrapper">
 
-    <header><h1>Computervredebreuk</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Computervredebreuk</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/computervredebreuk1.jfif"
-          alt=" afbeelding_computervredebreuk"> </article>
+        <div id="bigimage">
+            <img src="../afbeeldingen/computervredebreuk1.jfif" alt=" afbeelding_computervredebreuk"> </article>
 
-          <article class="kop_samenvattingComputervredebreuk1">
-            <p>Er zijn verschillende soorten computercriminaliteit, zoals diefstal, fraude, afpersing en hacken, wat ook bekend staat als computervredebreuk. Hacken is illegaal, zelfs als het alleen een poging is. Het hebben van tools om te hacken is ook verboden. Eigenaren moeten zorgen voor goede beveiliging, maar dit betekent niet dat het oké is om in te breken. Zelfs als er na het inbreken niets gebeurd, is het strafbaar. Het veranderen of verwijderen van gegevens na een inbraak is nog een ander misdrijf. Deze wetten zijn er om cybercriminaliteit te stoppen en systemen te beschermen, en benadrukken het belang van eerlijk computergebruik. Door de juiste veiligheidsmaatregelen te nemen, kunnen veel problemen worden voorkomen. Als je toch slachtoffer wordt van computercriminaliteit, wat erg serieus is, is het aangeraden om naar de politie te gaan en aangifte te doen.
-            </p>
+            <article class="kop_samenvattingComputervredebreuk1">
+                <p>Er zijn verschillende soorten computercriminaliteit, zoals diefstal, fraude, afpersing en hacken, wat
+                    ook bekend staat als computervredebreuk. Hacken is illegaal, zelfs als het alleen een poging is. Het
+                    hebben van tools om te hacken is ook verboden. Eigenaren moeten zorgen voor goede beveiliging, maar
+                    dit betekent niet dat het oké is om in te breken. Zelfs als er na het inbreken niets gebeurd, is het
+                    strafbaar. Het veranderen of verwijderen van gegevens na een inbraak is nog een ander misdrijf. Deze
+                    wetten zijn er om cybercriminaliteit te stoppen en systemen te beschermen, en benadrukken het belang
+                    van eerlijk computergebruik. Door de juiste veiligheidsmaatregelen te nemen, kunnen veel problemen
+                    worden voorkomen. Als je toch slachtoffer wordt van computercriminaliteit, wat erg serieus is, is
+                    het aangeraden om naar de politie te gaan en aangifte te doen.
+                </p>
         </div>
 
- <article class="koptitel"><p>Diefstal, fraude en afpersing</p></article>
+        <article class="koptitel">
+            <p>Diefstal, fraude en afpersing</p>
+        </article>
 
-<article class="kop_samenvattingComputervredebreuk2">
-    <p>
-        <span class="bold-word">Diefstal</span> van data kan op verschillende manieren plaatsvinden, zoals het hacken van een apparaat of toegang verkrijgen tot een database met persoonlijke gegevens. Soms merkt de gebruiker niet eens dat er data gestolen is. Deze informatie is vaak geld waard en kan doorverkocht worden, of gebruikt worden voor identiteitsfraude. Hierbij kunnen criminelen criminele activiteiten onder jouw naam uitvoeren. Met die data kunnen ze ook de gebruikers afpersen, waarbij criminelen dreigen de gegevens openbaar te maken tenzij er geld wordt betaald. <br>
-        <span class="bold-word">Fraude</span> is een vorm van oplichting waarbij de slachtoffers worden bedrogen, vaak met als doel dat die mensen geld aan hun overhandigen. Dit kan via phishing, spyware, online shops, social media of online dating. Slachtoffers worden bijvoorbeeld misleid bij aankopen of kunnen worden bedrogen door valse online relaties, waarbij criminelen zich vals voordoen en geld opeisen. <br>
-        <span class="bold-word">Afpersing</span> kan gebeuren via malware zoals ransomware, de criminelen eisen dan betaling zodat ze geen gegevens vrijgeven. Ook kunnen gestolen gegevens worden gebruikt om iemand te dwingen, zoals dreigen met het delen van naaktfoto's. Zulke bedreigingen gaan zelfs verder dan afpersing en kunnen slachtoffers bang maken om te betalen, zelfs als de crimineel de gegevens niet eigenlijk bezit.
-    </p>
-</article>
+        <article class="kop_samenvattingComputervredebreuk2">
+            <p>
+                <span class="bold-word">Diefstal</span> van data kan op verschillende manieren plaatsvinden, zoals het
+                hacken van een apparaat of toegang verkrijgen tot een database met persoonlijke gegevens. Soms merkt de
+                gebruiker niet eens dat er data gestolen is. Deze informatie is vaak geld waard en kan doorverkocht
+                worden, of gebruikt worden voor identiteitsfraude. Hierbij kunnen criminelen criminele activiteiten
+                onder jouw naam uitvoeren. Met die data kunnen ze ook de gebruikers afpersen, waarbij criminelen dreigen
+                de gegevens openbaar te maken tenzij er geld wordt betaald. <br>
+                <span class="bold-word">Fraude</span> is een vorm van oplichting waarbij de slachtoffers worden
+                bedrogen, vaak met als doel dat die mensen geld aan hun overhandigen. Dit kan via phishing, spyware,
+                online shops, social media of online dating. Slachtoffers worden bijvoorbeeld misleid bij aankopen of
+                kunnen worden bedrogen door valse online relaties, waarbij criminelen zich vals voordoen en geld
+                opeisen. <br>
+                <span class="bold-word">Afpersing</span> kan gebeuren via malware zoals ransomware, de criminelen eisen
+                dan betaling zodat ze geen gegevens vrijgeven. Ook kunnen gestolen gegevens worden gebruikt om iemand te
+                dwingen, zoals dreigen met het delen van naaktfoto's. Zulke bedreigingen gaan zelfs verder dan afpersing
+                en kunnen slachtoffers bang maken om te betalen, zelfs als de crimineel de gegevens niet eigenlijk
+                bezit.
+            </p>
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
-</div>
+    </div>
 
 </body>
 
