--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -13,37 +13,58 @@
 
     <div id="wrapper">
 
-    <header><h1>Zwakheden in de architectuur</h1></header>
+        <header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Architectuur.jpg"
-          alt=" afbeelding authenticatie"> </div>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
 
-          <article class="kop_samenvattingZwakhedenArchitectuur1">
-            <p>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden in de architectuur van ICT-producten kan je meestal verdelen in drie lagen: 
+            <h1>Zwakheden in de architectuur</h1>
+        </header>
+
+        <div id="bigimage">
+            <img src="../afbeeldingen/Architectuur.jpg" alt=" afbeelding authenticatie">
+        </div>
+
+        <article class="kop_samenvattingZwakhedenArchitectuur1">
+            <p>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een
+                fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden
+                in de architectuur van ICT-producten kan je meestal verdelen in drie lagen:
             <ul>
                 <li>De fysieke laag</li>
                 <li>De logische laag</li>
                 <li>De toepassingslaag</li>
-              </ul>
-           <p> Een zwakte in het systeem ontstaat wanneer er iets misgaat in een van deze lagen of bij de communicatie tussen twee lagen. Het kan een fout zijn in het ontwerp van die laag of in hoe ze met elkaar praten. Vaak had de maker die fout niet voorzien.
-            Een voorbeeld is de camera op je telefoon. Soms kan een app stiekem je camera gebruiken zonder dat je daar toestemming voor hebt gegeven. Dit soort fouten kunnen gebruikt worden door mensen die proberen je privacy te schenden.</p>
+            </ul>
+            <p> Een zwakte in het systeem ontstaat wanneer er iets misgaat in een van deze lagen of bij de communicatie
+                tussen twee lagen. Het kan een fout zijn in het ontwerp van die laag of in hoe ze met elkaar praten.
+                Vaak had de maker die fout niet voorzien.
+                Een voorbeeld is de camera op je telefoon. Soms kan een app stiekem je camera gebruiken zonder dat je
+                daar toestemming voor hebt gegeven. Dit soort fouten kunnen gebruikt worden door mensen die proberen je
+                privacy te schenden.</p>
         </article>
 
- <article class="koptitel"><p>SQL injecties en ethische hackers</p></article>
+        <article class="koptitel">
+            <p>SQL injecties en ethische hackers</p>
+        </article>
 
-<article class="kop_samenvattingZwakhedenArchitectuur2">
-    <p>
-        Een ander voorbeeld gaat over databases en vragen in een programmeertaal genaamd SQL. Als er een fout zit in de manier waarop een app of website gegevens uit een database haalt, kunnen hackers toegang krijgen tot informatie die ze niet zouden mogen hebben. Dat heet een SQL-injectie.
-    Als je een app of programma gebruikmaakt van een database, moet er altijd voor gezorgd worden dat de verbinding goed beveiligd is. Ook is het belangrijk dat de informatie die mensen invoeren, goed te controleren en te filteren om problemen te voorkomen.
-    Mensen kunnen deze zwakke plekken in systemen vinden door ze actief te testen. Dit wordt soms gedaan door ethische hackers die express proberen binnen te komen om fouten te ontdekken voordat echte hackers dat doen. 
-    </p>
-</article>
+        <article class="kop_samenvattingZwakhedenArchitectuur2">
+            <p>
+                Een ander voorbeeld gaat over databases en vragen in een programmeertaal genaamd SQL. Als er een fout
+                zit in de manier waarop een app of website gegevens uit een database haalt, kunnen hackers toegang
+                krijgen tot informatie die ze niet zouden mogen hebben. Dat heet een SQL-injectie.
+                Als je een app of programma gebruikmaakt van een database, moet er altijd voor gezorgd worden dat de
+                verbinding goed beveiligd is. Ook is het belangrijk dat de informatie die mensen invoeren, goed te
+                controleren en te filteren om problemen te voorkomen.
+                Mensen kunnen deze zwakke plekken in systemen vinden door ze actief te testen. Dit wordt soms gedaan
+                door ethische hackers die express proberen binnen te komen om fouten te ontdekken voordat echte hackers
+                dat doen.
+            </p>
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
-</div>
+    </div>
 
 </body>
 
