--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -13,24 +13,58 @@
 
     <div id="wrapper">
 
-    <header><h1>Beschikbaarheid</h1></header>
+        <header>
+            <nav class="Home">
+                <p><a href="../index.html">Home
+                    </a></p>
+            </nav>
+            <h1>Beschikbaarheid</h1>
+        </header>
 
-    <div id="bigimage"> 
-        <img
-          src="../afbeeldingen/Beschikbaarheid.jpg"
-          alt="afbeelding Beschikbaarheid"> </div>
+        <div id="bigimage">
+            <img src="../afbeeldingen/Beschikbaarheid.jpg" alt="afbeelding Beschikbaarheid">
+        </div>
 
-<article class="kop_samenvattingBeschikbaarheid1"><p>De beschikbaarheid van data is heel belangrijk, data moet altijd beschikbaar zijn wanneer we het nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie, zodat die niet worden kwijtgeraakt. Experts raden aan om het 3-2-1-systeem voor back-ups te gebruiken, het 3-2-1-back-upsysteem betekent dat er drie kopieën van je gegevens zijn: twee op verschillende opslagmedia en één op een andere locatie. Ook worden er speciale technieken gebruikt om gegevens veilig te houden, zoals het versleutelen ervan zodat alleen de juiste mensen ze kunnen lezen. Soms kunnen er problemen optreden, zoals aanvallen op websites, die ervoor zorgen dat ze even niet bereikbaar zijn. Het is belangrijk om maatregelen te nemen om deze problemen te voorkomen en ervoor te zorgen dat onze gegevens altijd veilig en beschikbaar zijn wanneer we ze nodig hebben.
-</p></article>
+        <article class="kop_samenvattingBeschikbaarheid1">
+            <p>De beschikbaarheid van data is heel belangrijk, data moet altijd beschikbaar zijn wanneer we het nodig
+                hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van
+                onze computers en het maken van kopieën van belangrijke informatie, zodat die niet worden kwijtgeraakt.
+                Experts raden aan om het 3-2-1-systeem voor back-ups te gebruiken, het 3-2-1-back-upsysteem betekent dat
+                er drie kopieën van je gegevens zijn: twee op verschillende opslagmedia en één op een andere locatie.
+                Ook worden er speciale technieken gebruikt om gegevens veilig te houden, zoals het versleutelen ervan
+                zodat alleen de juiste mensen ze kunnen lezen. Soms kunnen er problemen optreden, zoals aanvallen op
+                websites, die ervoor zorgen dat ze even niet bereikbaar zijn. Het is belangrijk om maatregelen te nemen
+                om deze problemen te voorkomen en ervoor te zorgen dat onze gegevens altijd veilig en beschikbaar zijn
+                wanneer we ze nodig hebben.
+            </p>
+        </article>
 
-          <article class="koptitel"><p>Encryptie en DDoS</p></article>
+        <article class="koptitel">
+            <p>Encryptie en DDoS</p>
+        </article>
 
-<article class="kop_samenvattingBeschikbaarheid2"><p>Het opslaan en verzenden van gevoelige informatie zoals wachtwoorden, pincodes en vingerafdrukken brengt risico’s met zich mee. Hackers zouden bijvoorbeeld een database met wachtwoorden kunnen bekijken! Dit kan leiden tot toegang tot persoonlijke gegevens, wat een ernstig probleem is voor gebruikers. Om deze gegevens veilig te houden, kunnen ze versleuteld worden opgeslagen of verzonden. Encryptie husselt de inhoud van bestanden met behulp van een sleutel, waardoor het onmogelijk is om de inhoud te begrijpen zonder de juiste sleutel. WhatsApp is een voorbeeld waarbij berichten en oproepen end-to-end versleuteld zijn, waardoor alleen de bedoelde ontvanger ze kan lezen of beluisteren. Vergelijkbaar met encryptie, wordt hashing gebruikt voor het opslaan van wachtwoorden en vingerafdrukken. Hashing husselt het wachtwoord, maar maakt het onmogelijk om terug te keren naar het origineel. Bij inloggen wordt het wachtwoord nogmaals gehasht en vergeleken met de hash in de database om te controleren. Bij DDoS-aanvallen, gericht op het tijdelijk uitschakelen van een service, wordt een overvloed aan verzoeken naar een website gestuurd, waardoor deze kan crashen. Het is technisch niet ingewikkeld om een DDoS-aanval uit te voeren en kan ernstige gevolgen hebben, zoals gevaar voor patiënten in een ziekenhuis of het onbereikbaar worden van een bank. Om DDoS-aanvallen tegen te gaan, worden verschillende methoden gebruikt, zoals het filteren van internetverkeer of het gebruik van gespecialiseerde anti-DDoS-diensten.
-</p></article>
+        <article class="kop_samenvattingBeschikbaarheid2">
+            <p>Het opslaan en verzenden van gevoelige informatie zoals wachtwoorden, pincodes en vingerafdrukken brengt
+                risico’s met zich mee. Hackers zouden bijvoorbeeld een database met wachtwoorden kunnen bekijken! Dit
+                kan leiden tot toegang tot persoonlijke gegevens, wat een ernstig probleem is voor gebruikers. Om deze
+                gegevens veilig te houden, kunnen ze versleuteld worden opgeslagen of verzonden. Encryptie husselt de
+                inhoud van bestanden met behulp van een sleutel, waardoor het onmogelijk is om de inhoud te begrijpen
+                zonder de juiste sleutel. WhatsApp is een voorbeeld waarbij berichten en oproepen end-to-end versleuteld
+                zijn, waardoor alleen de bedoelde ontvanger ze kan lezen of beluisteren. Vergelijkbaar met encryptie,
+                wordt hashing gebruikt voor het opslaan van wachtwoorden en vingerafdrukken. Hashing husselt het
+                wachtwoord, maar maakt het onmogelijk om terug te keren naar het origineel. Bij inloggen wordt het
+                wachtwoord nogmaals gehasht en vergeleken met de hash in de database om te controleren. Bij
+                DDoS-aanvallen, gericht op het tijdelijk uitschakelen van een service, wordt een overvloed aan verzoeken
+                naar een website gestuurd, waardoor deze kan crashen. Het is technisch niet ingewikkeld om een
+                DDoS-aanval uit te voeren en kan ernstige gevolgen hebben, zoals gevaar voor patiënten in een ziekenhuis
+                of het onbereikbaar worden van een bank. Om DDoS-aanvallen tegen te gaan, worden verschillende methoden
+                gebruikt, zoals het filteren van internetverkeer of het gebruik van gespecialiseerde anti-DDoS-diensten.
+            </p>
+        </article>
 
-<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
-</div>
+    </div>
 
 </body>
 
