--- a/maatregelen/zijpaginaQuiz.html
+++ b/maatregelen/zijpaginaQuiz.html
@@ -17,8 +17,15 @@
 
     <div id="bigimage"> 
         <img
-          src="../afbeeldingen/Detectie.jpg"
+          src="../afbeeldingen/Phishing1.jpg"
           alt=" Detectie"> </div>
+
+    <nav>
+
+        <a href="zijpaginaQuiz2.html">Ja</a>
+        <a href="zijpaginaQuizhelaas.html">Nee</a>
+        
+    </nav>
 
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
