--- a/maatregelen/zijpaginaQuiz.html
+++ b/maatregelen/zijpaginaQuiz.html
@@ -13,12 +13,12 @@
 
     <div id="wrapper">
 
-    <header><h1>Detectie</h1></header>
+    <header><h1>Quiz</h1></header>
 
     <div id="bigimage"> 
         <img
           src="../afbeeldingen/Phishing1.jpg"
-          alt=" Detectie"> </div>
+          alt=" Quiz"> </div>
 
     <nav>
 
