--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -45,6 +45,9 @@
                 bijvoorbeeld voorkomen dat er data wordt gestolen. In dat geval is er vaak ook financiële schade door de
                 correctiekosten of door de uitval van de systemen.
             </p>
+            <p>
+                Laten we nu gaan kijken of u in phishing trapt. <a href="zijpaginaQuiz.html">Klik hier voor de quiz</a>
+            </p>
         </article>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
