--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -45,7 +45,7 @@
 
         <article class="kop_samenvattingBeschikbaarheid2">
             <p>Het opslaan en verzenden van gevoelige informatie zoals wachtwoorden, pincodes en vingerafdrukken brengt
-                risico’s met zich mee. Hackers zouden bijvoorbeeld een database met wachtwoorden kunnen bekijken! Dit
+                risico&apos;s met zich mee. Hackers zouden bijvoorbeeld een database met wachtwoorden kunnen bekijken! Dit
                 kan leiden tot toegang tot persoonlijke gegevens, wat een ernstig probleem is voor gebruikers. Om deze
                 gegevens veilig te houden, kunnen ze versleuteld worden opgeslagen of verzonden. Encryptie husselt de
                 inhoud van bestanden met behulp van een sleutel, waardoor het onmogelijk is om de inhoud te begrijpen
