--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -33,7 +33,7 @@
         </article>
 
         <article class="koptitel">
-            <h2>Detectiehulpmiddelen</h2>
+            <p>Detectiehulpmiddelen</p>
         </article>
 
         <article class="kop_samenvattingdetectie2">
