--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -36,7 +36,7 @@
         </article>
 
         <article class="koptitel">
-            <h2>Serieuzere problemen</h2>
+            <p>Serieuzere problemen</p>
         </article>
 
         <article class="kop_samenvattingRepressie_en_correctie2">
