--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         aanvallers en verdedigers en wat voor maatregelen u zelf kunt nemen.</p>
     </article>
 
-    <article class="koptitel">
+    <div class="koptitel">
       <h1 id="1ofzo">Digitale Beveiliging en identiteit</h1>
-    </article>
+    </div>
 
-    <article class="kop_samenvatting">
+    <div class="kop_samenvatting">
       <p>
         Digitale technologieën veranderen hoe we leven, werken en communiceren. We laten overal digitale sporen achter,
         zoals op sociale media, bankwebsites en schoolwebsites. Bescherming van deze gegevens is belangrijk omdat
@@ -64,7 +64,7 @@
         bijvoorbeeld sterke wachtwoorden te gebruiken en toegangscodes op apparaten in te stellen. Het beschermen van
         onze digitale gegevens gaat vooral over deze drie aspecten:
       </p>
-    </article>
+    </div>
 
     <div class="plaatjes_klein"><img src="afbeeldingen/Authenticatie1.webp" alt=" Afbeelding authenticatie"></div>
 
@@ -99,11 +99,11 @@
       </p>
     </nav>
 
-    <article class="koptitel">
+    <div class="koptitel">
       <h1 id="2ofzo">Bedreigingen</h1>
-    </article>
+    </div>
 
-    <article class="kop_samenvattingBedreigingen">
+    <div class="kop_samenvattingBedreigingen">
       <p>De digitale veiligheid van gebruikers online wordt op allerlei manieren bedreigd. Aanvallers zoeken naar
         manieren om toegang tot gegevens te krijgen en die te gebruiken. Ze maken gebruik van de 3 verschillende soorten
         zwakheden:</p>
@@ -114,7 +114,7 @@
       </ul>
       <p>Met verschilende methoden zoals encryptie, HTTPS en sterke wachtwoorden kan de gebruiker de aanvallen
         verdedigen.</p>
-    </article>
+      </div>
 
     <div class="plaatjes_klein"><img src="afbeeldingen/Architectuur.jpg" alt=" Afbeelding Architectuur"></div>
 
@@ -150,11 +150,11 @@
       </p>
     </nav>
 
-    <article class="koptitel">
+    <div class="koptitel">
       <h1 id="3ofzo">Aanvallers en verdedigers</h1>
-    </article>
+    </div>
 
-    <article class="kop_samenvattingAanvallers">
+    <div class="kop_samenvattingAanvallers">
       <p>
         In de digitale wereld zijn er verschillende rollen: aanvallers en verdedigers. Verdedigers proberen steeds
         betere beveiliging te ontwikkelen, terwijl aanvallers juist voortdurend nieuwe manieren bedenken om door deze
@@ -163,7 +163,7 @@
         internetcriminelen. Overheden kunnen gebruik maken van hacken om criminelen en terroristen op te sporen.
         Computercriminaliteit omvat dus verschillende soorten aanvallen en verdedigers, wat alles veel complexer maakt.
       </p>
-    </article>
+    </div>
 
     <div class="plaatjes_klein"><img src="afbeeldingen/computervredebreuk1.jfif" alt=" Afbeelding_Computervredebreuk">
     </div>
@@ -200,11 +200,11 @@
       </p>
     </nav>
 
-    <article class="koptitel">
+    <div class="koptitel">
       <h1 id="4ofzo">Maatregelen</h1>
-    </article>
+    </div>
 
-    <article class="kop_samenvattingMaatregelen">
+    <div class="kop_samenvattingMaatregelen">
       <p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de
         overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kunt u veel
         maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie.
@@ -212,7 +212,7 @@
         kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt
         herkennen.
       </p>
-    </article>
+    </div>
 
     <div class="plaatjes_klein"><img src="afbeeldingen/Preventie.jpg" alt="Preventie"></div>
 
